--- a/ofisart.azFront/package.json
+++ b/ofisart.azFront/package.json
@@ -14,6 +14,8 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
+    "formik": "^2.4.5",
+    "helmet": "^7.1.0",
     "i18next": "^23.8.2",
     "i18next-browser-languagedetector": "^7.2.0",
     "i18next-http-backend": "^2.4.3",
@@ -23,7 +25,8 @@
     "react-i18next": "^14.0.5",
     "react-router-dom": "^6.22.0",
     "sass": "^1.70.0",
-    "swiper": "^11.0.5"
+    "swiper": "^11.0.5",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
