--- a/ofisart.azFront/package.json
+++ b/ofisart.azFront/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-i18next": "^14.0.5",
+    "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.0",
     "sass": "^1.70.0",
     "swiper": "^11.0.5",
