--- a/ofisart.azFront/package.json
+++ b/ofisart.azFront/package.json
@@ -21,6 +21,7 @@
     "i18next-http-backend": "^2.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-hot-toast": "^2.4.1",
     "react-i18next": "^14.0.5",
     "react-icons": "^5.0.1",
