--- a/ofisart.azBack/vercel.json
+++ b/ofisart.azBack/vercel.json
@@ -2,6 +2,10 @@
     "version": 2,
     "builds": [
         {
+            "src": "package.json",
+            "use": "vercel-sapper"
+        },
+        {
             "src": "index.js",
             "use": "@vercel/node"
         }
@@ -9,13 +13,11 @@
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "index.js"
-        }
-    ],
-    "rewrites": [
-        {
-            "source": "/(.*)",
-            "destination": "/"
+            "dest": "index.js",
+            "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
+            "headers": {
+                "Access-Control-Allow-Origin": "*"
+            }
         }
     ]
 }
