--- a/ofisart.azBack/vercel.json
+++ b/ofisart.azBack/vercel.json
@@ -2,10 +2,6 @@
     "version": 2,
     "builds": [
         {
-            "src": "package.json",
-            "use": "vercel-sapper"
-        },
-        {
             "src": "index.js",
             "use": "@vercel/node"
         }
@@ -13,11 +9,13 @@
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "index.js",
-            "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
-            "headers": {
-                "Access-Control-Allow-Origin": "*"
-            }
+            "dest": "index.js"
+        }
+    ],
+    "rewrites": [
+        {
+            "source": "/(.*)",
+            "destination": "/"
         }
     ]
 }
