--- a/ofisart.azBack/package.json
+++ b/ofisart.azBack/package.json
@@ -4,15 +4,12 @@
   "description": "",
   "main": "index.js",
   "engines": {
-    "node": "18.x"
+    "node": "20.x"
   },
   "scripts": {
-    "start":"npx nodemon index.js" ,
-    "build":"echo \"Building...\"" ,
+    "start":"npx node index.js" ,
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "type": "module",
   "author": "",
   "license": "ISC",
   "dependencies": {
