--- a/ofisart.azBack/package.json
+++ b/ofisart.azBack/package.json
@@ -7,8 +7,8 @@
     "node": "18.x"
   },
   "scripts": {
-    "start":"npx nodemon index.js" ,
-    "build":"echo \"Building...\"" ,
+    "start": "npx nodemon index.js",
+    "build": "echo \"Building...\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -21,6 +21,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.1",
+    "multer": "^1.4.5-lts.1",
     "password-hash": "^1.2.2"
   }
 }
